--- a/references.bib
+++ b/references.bib
@@ -778,3 +778,17 @@
   url = {http://www.journals.uchicago.edu/doi/abs/10.1093/bjps/38.4.551},
   urldate = {2023-10-14}
 }
+
+@article{husseyMethodStreamlinePhacking2021,
+  title = {A Method to Streamline P-Hacking},
+  author = {Hussey, Ian},
+  date = {2021-04-01},
+  journaltitle = {Meta-Psychology},
+  volume = {5},
+  issn = {2003-2714},
+  doi = {10.15626/MP.2020.2529},
+  url = {https://open.lnu.se/index.php/metapsychology/article/view/2529},
+  urldate = {2023-10-20},
+  langid = {english}
+}
+
