--- a/references.bib
+++ b/references.bib
@@ -792,3 +792,20 @@
   langid = {english}
 }
 
+@article{kerrHARKingHypothesizingResults1998,
+  title = {{{HARKing}}: {{Hypothesizing After}} the {{Results}} Are {{Known}}},
+  shorttitle = {{{HARKing}}},
+  author = {Kerr, Norbert L.},
+  date = {1998-08},
+  journaltitle = {Personality and Social Psychology Review},
+  shortjournal = {Pers Soc Psychol Rev},
+  volume = {2},
+  number = {3},
+  pages = {196--217},
+  issn = {1088-8683, 1532-7957},
+  doi = {10.1207/s15327957pspr0203_4},
+  url = {http://journals.sagepub.com/doi/10.1207/s15327957pspr0203_4},
+  urldate = {2023-10-23}
+}
+
+
