cite the defeatist perspective

--- a/references.bib
+++ b/references.bib
@@ -808,4 +808,20 @@
   urldate = {2023-10-23}
 }
 
+@article{kotzenMultipleStudiesEvidential2013,
+  title = {Multiple {{Studies}} and {{Evidential Defeat}}},
+  author = {Kotzen, Matthew},
+  date = {2013},
+  journaltitle = {Noûs},
+  volume = {47},
+  number = {1},
+  eprint = {43828821},
+  eprinttype = {jstor},
+  pages = {154--180},
+  publisher = {{Wiley}},
+  issn = {0029-4624},
+  url = {http://www.jstor.org/stable/43828821},
+  urldate = {2023-10-23},
+}
+
 
