--- a/references.bib
+++ b/references.bib
@@ -824,4 +824,17 @@
   urldate = {2023-10-23},
 }
 
+@article{hoflerMeansValuableExploration2022,
+  title = {Means to Valuable Exploration: {{I}}. {{The}} Blending of Confirmation and Exploration and How to Resolve It},
+  shorttitle = {Means to Valuable Exploration},
+  author = {Höfler, Michael and Scherbaum, Stefan and Kanske, Philipp and McDonald, Brennan and Miller, Robert},
+  date = {2022-11-08},
+  journaltitle = {Meta-Psychology},
+  shortjournal = {MP},
+  volume = {6},
+  issn = {2003-2714},
+  doi = {10.15626/MP.2021.2837},
+  url = {https://open.lnu.se/index.php/metapsychology/article/view/2837},
+  urldate = {2023-10-23}
+}
 
