--- a/references.bib
+++ b/references.bib
@@ -838,3 +838,14 @@
   urldate = {2023-10-23}
 }
 
+@report{willrothBestLaidPlans2023,
+  type = {preprint},
+  title = {Best {{Laid Plans}}: {{A Guide}} to {{Reporting Preregistration Deviations}}},
+  shorttitle = {Best {{Laid Plans}}},
+  author = {Willroth, Emily C and Atherton, Olivia E.},
+  date = {2023-10-26},
+  institution = {{PsyArXiv}},
+  doi = {10.31234/osf.io/dwx69},
+  url = {https://osf.io/dwx69},
+  urldate = {2023-10-30}
+}
