--- a/references.bib
+++ b/references.bib
@@ -849,3 +849,16 @@
   url = {https://osf.io/dwx69},
   urldate = {2023-10-30}
 }
+
+@article{brandmaierStructuralEquationModel2013,
+  title = {Structural Equation Model Trees.},
+  author = {Brandmaier, Andreas M. and family=Oertzen, given=Timo, prefix=von, useprefix=true and McArdle, John J. and Lindenberger, Ulman},
+  date = {2013},
+  journaltitle = {Psychological Methods},
+  volume = {18},
+  number = {1},
+  pages = {71--86},
+  issn = {1939-1463, 1082-989X},
+  doi = {10.1037/a0030001},
+  langid = {english}
+}
