--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -165,11 +165,191 @@ crisis_plot /
 .small.right[***They call it "reproducibility" and fail to publish the raw data.**]
 
 ---
+class: center, middle
+
+# Transparency in Science
+
+---
+class: center, middle, inverse
+
+# Ideal Preregistration
+
+---
+
+# Preregistration as Code
+
+### version control + dynamic documents
+
+---
+class: center
+
+.pull-left[
+
+### Standard Preregistration
+
+hunches
+
+↓
+
+preregistration
+
+↓
+
+data
+
+↓
+
+article draft
+]
+
+.pull-right[
+### Preregistration as Code
+
+simulated data
+
+↓
+
+article draft with mock results
+
+↓
+
+data
+
+↓
+
+article draft with real results
+
+]
+
+---
 class: inverse, center, middle
 
-# Transparency in Science*
+# Traditional view
 
-*Statisticians' Edition
+---
+class: center
+
+# Preregistration separates:
+
+.pull-left.center[
+
+# confirmatory
+
+]
+
+.pull-right.center[
+
+# exploratory
+
+]
+
+.pull-left.center[
+
+# ≈
+
+# preregistered
+
+]
+
+.pull-right.center[
+
+
+# ≈
+
+# not preregistered
+
+]
+
+---
+class: center, middle
+
+# Consider three scenarios:
+
+---
+layout: true
+class: center, middle
+---
+
+.huge[1.]
+
+.large[You predict the outcome of a horse race correctly.]
+
+--
+
+.large[Great! You know something about horses.]
+
+---
+
+.huge[2.]
+
+.large[You tell me the outcome of a horse race after the race.]
+
+--
+
+.large[Great! You know something about reading a chart.]
+
+---
+
+.huge[3.]
+
+.large[You predict that you can tell me the outcome after the race.]
+
+--
+
+.large[Great! You know that you can preregister harking.]
+
+---
+layout: false
+class: center
+
+# Preregistration separates?
+
+.pull-left.center[
+
+# confirmatory
+
+]
+
+.pull-right.center[
+
+# exploratory
+
+]
+
+.pull-left.center[
+
+# ≈
+
+# preregistered
+
+]
+
+.pull-right.center[
+
+
+# ≈
+
+# not preregistered
+
+]
+
+---
+class: center, middle
+
+## Obvious problems:
+
+1. not a principled rational
+2. vagueness of prediction is not accounted for
+3. what about changes after the preregistration
+
+---
+class: center, middle
+
+.left[I propose that, reduction in ]
+
+.large.blurry2[Uncertainty]
+
+.right[warrants preregistration.]
 
 ---
 class: center, middle
