extend slides a bit more

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -175,6 +175,7 @@ class: center, middle, inverse
 # Ideal Preregistration
 
 ---
+class: center
 
 # Preregistration as Code
 
@@ -350,6 +351,60 @@ class: center, middle
 .large.blurry2[Uncertainty]
 
 .right[warrants preregistration.]
+
+---
+class: center, middle
+
+.pull-left[
+
+It makes a difference what you
+
+## Preregister:
+
+]
+
+--
+
+.pull-right[
+
+### Results (= confirmatory)
+
+### ≠
+
+### Inductive Process (≠ confirmatory)
+
+]
+
+
+---
+
+# Can I explore the data?
+
+--
+
+# Yes.
+
+---
+template: theoretical-risk-plot2
+
+---
+
+# Can I deviate?
+
+--
+
+# Sometimes.
+
+---
+template: theoretical-risk-plot2
+
+---
+
+# How much detail?
+
+--
+
+# Very detailed.
 
 ---
 class: center, middle
@@ -785,6 +840,7 @@ class: center, middle, inverse
 # Ideal Preregistration
 
 ---
+class: center
 
 # Preregistration as Code
 
